--- a/fluxograma/templates/fluxogramas/edit.html
+++ b/fluxograma/templates/fluxogramas/edit.html
@@ -40,6 +40,7 @@
     </ul>
     <br>
     <a href="{% url 'fluxogramas:list' %}"><button class="btn btn-danger">Voltar</button></a>
+    <a href="{% url 'fluxogramas:detail' fluxograma.id %}"><button class="btn btn-primary">Visualizar</button></a>
 </section>
 
 {% endblock content %}
